Fix tests
git-svn-id: http://svn.terracotta.org/svn/ehcache@7657 b9324663-ca0f-0410-8574-be9b3887307d